Archive2/ef/83e55374124593/output
main.cpp:66:3: error: conflicting types for 'operation_t'
 } operation_t;
   ^
main.cpp:55:3: note: previous declaration of 'operation_t' was here
 } operation_t;
   ^
main.cpp:80:5: error: unknown type name 'function_t'
     function_t function;
     ^
main.cpp: In function 'main':
main.cpp:87:28: error: 'function_t' undeclared (first use in this function)
     printf("%lu\n", sizeof(function_t));
                            ^
main.cpp:87:28: note: each undeclared identifier is reported only once for each function it appears in
